--- a/pages/index/index.wxml
+++ b/pages/index/index.wxml
@@ -1,20 +1,34 @@
 <!--pages/index.wxml-->
 <wxs module="setstyle" src="./setstyle.wxs"></wxs>
 <view wx:if="{{img_paths.length > 0}}" class="content" style="height:{{img_height}}rpx">
-  <view class="bottom_img img_box"  style="height:{{img_height}}rpx; width:{{img_width}}rpx; left:{{img_left}}rpx">
-    <image class="img" src="{{img_paths[0]}}" mode="scaleToFill"></image>
-  </view>
-  <view class="top_img img_box" style="height:{{img_height}}rpx; width:{{img_width * 0.5}}rpx; left:{{img_left}}rpx">
-    <image class="img" src="{{img_paths[1]}}" mode="heightFix"></image>
-  </view>
+  <scroll-view class="bottom_img_box img_box" 
+    style="height:{{img_height}}rpx; width:{{img_width}}rpx; left:{{img_left}}rpx; z-index:{{bottom_img_z_index}}" 
+    scroll-x="{{scalable}}" scroll-y="{{scalable}}" scroll-top="{{scroll_top}}" scroll-left="{{scroll_left}}" 
+    enhanced="true" showScrollbar="false" bindtouchmove="{{setstyle.touch_move}}" 
+    bindtouchstart="{{setstyle.touch_start}}" bindtouchend="{{setstyle.touch_end}}">
+    <image class="img bottom_img" src="{{img_paths[0]}}" mode="scaleToFill" data-scalable="{{scalable}}"></image>
+  </scroll-view>
+  <scroll-view class="top_img_box img_box" 
+    style="height:{{img_height}}rpx; width:{{img_width * 0.5}}rpx; left:{{img_left}}rpx; z-index:{{top_img_z_index}}" 
+    scroll-x="{{scalable}}" scroll-y="{{scalable}}" scroll-top="{{scroll_top}}" scroll-left="{{scroll_left}}" 
+    enhanced="true" showScrollbar="false">
+    <image class="img top_img" src="{{img_paths[1]}}" mode="heightFix"></image>
+  </scroll-view>
 </view>
-<movable-area class="cursor_area" style="height:{{cursor_height}}rpx" wx:if="{{img_paths.length > 0}}">
+<movable-area class="cursor_area" style="height:{{cursor_height}}rpx" hidden="{{img_paths.length === 0 || scalable}}">
   <movable-view class="cursor_box" x="{{cursor_x}}" direction="horizontal" style="width:{{cursor_width}}rpx" bindchange="{{setstyle.move_cursor}}">
     <image src="../images/arrow_left.png" class="arrow" mode="aspectFit"></image>
     <image src="../images/cursor.png" class="cursor" mode="aspectFit"></image>
     <image src="../images/arrow_right.png" class="arrow" mode="aspectFit"></image>
   </movable-view>
 </movable-area>
-<view class="bottom_tab">
-  <button type="primary" size="default" bindtap="add_img">添加图片</button>
+<view>
+  <view wx:if="{{!scalable}}" class="bottom_tab">
+    <button type="default" size="default" bindtap="scale_img">缩放图片</button>
+    <button type="primary" size="default" bindtap="add_img">添加图片</button>
+  </view>
+  <view wx:else class="bottom_tab">
+    <button type="default" size="default" bindtap="{{setstyle.cancel}}">取消</button>
+    <button type="primary" size="default" bindtap="{{setstyle.confirm}}">确认</button>
+  </view>
 </view>
