--- a/pages/index/index.wxml
+++ b/pages/index/index.wxml
@@ -25,7 +25,7 @@
 </movable-area>
 <view>
   <view wx:if="{{!scalable}}" class="bottom_tab">
-    <button type="default" size="default" bindtap="scale_img">缩放图片</button>
+    <button type="default" size="default" bindtap="scale_img">缩放</button>
     <button type="primary" size="default" bindtap="add_img">添加图片</button>
   </view>
   <view wx:else class="bottom_tab">
