--- a/pages/index/setstyle.wxs
+++ b/pages/index/setstyle.wxs
@@ -31,11 +31,10 @@ function touch_start (event, instance) {
 }
 
 
-// 双指缩放移动
+// 双指缩放
 function touch_move (event, instance) {
   if (event.touches.length !== 2) return;
   if (!is_scalable(bottom_img)) return;
-  // console.log('event', JSON.stringify(event));
   var x_move = event.touches[1].clientX - event.touches[0].clientX;
   var y_move = event.touches[1].clientY - event.touches[0].clientY;
   var current_distance = Math.sqrt(x_move * x_move + y_move * y_move);
@@ -46,24 +45,15 @@ function touch_move (event, instance) {
   set_style(bottom_img, current_img_width, current_img_height)
 }
 
-// 双指结束移动
+// 结束缩放
 function touch_end (event, instance) {
   if (!is_scalable(bottom_img)) return;
   var bottom_img_box = instance.selectComponent('.bottom_img_box');
-  var img_box_style = get_current_style(bottom_img_box);
-  // console.log('img_box_style', JSON.stringify(img_box_style));
+  img_box_style = get_current_style(bottom_img_box);
   var top_img = instance.selectComponent('.top_img');
   if (current_img_width < img_box_style.width || current_img_height < img_box_style.height) {
     set_style(bottom_img, img_box_style.width, img_box_style.height);
   }
-}
-
-// 设置元素样式
-function set_style(element, width, height) {
-  element.setStyle({
-    width: int_to_px(width),
-    height: int_to_px(height)
-  });
 }
 
 // 确认缩放
@@ -76,21 +66,29 @@ function confirm (event, instance) {
 
 // 取消缩放
 function cancel (event, instance) {
-  // top_img = instance.selectComponent('.top_img');
-  // set_style(top_img, img_box_style.width, img_box_style.height)
+  set_style(bottom_img, img_box_style.width, img_box_style.height);
   instance.callMethod('cancel_scale');
 }
 
 // 判断当前是否为可缩放的状态
 function is_scalable(element) {
   var dataset = element.getDataset();
-  // console.log("dataset", JSON.stringify(dataset));
   return dataset.scalable;
+}
+
+
+// 设置元素样式
+function set_style(element, width, height) {
+  element.setStyle({
+    width: int_to_px(width),
+    height: int_to_px(height)
+  });
 }
 
 
 // 将数字格式的样式值转成字符串格式
 function int_to_px (size) {
+  if (!size) return;
   return size.toString() + "px";
 }
 
