--- a/pages/index/setstyle.wxs
+++ b/pages/index/setstyle.wxs
@@ -66,7 +66,9 @@ function confirm (event, instance) {
 
 // 取消缩放
 function cancel (event, instance) {
-  set_style(bottom_img, img_box_style.width, img_box_style.height);
+  if (bottom_img) {
+    set_style(bottom_img, origin_img_width, origin_img_height);
+  }
   instance.callMethod('cancel_scale');
 }
 
